# python-boilerplate

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  modern-pytest-tdd.md  pyproject.toml  pyrightconfig.json  python-stack-2025.md  ruff.toml
.github/workflows/: ci.yml  publish.yml  release.yml
tests/: test_placeholder.py
