[project]
name = "python-boilerplate"
version = "0.1.0"
description = "A Python project boilerplate"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[[project.authors]]
name = "Chi Ejimofor"
email = "chi@peacockery.studio"

[project.urls]
Homepage = "https://github.com/peacockery-studio/python-boilerplate"
Repository = "https://github.com/peacockery-studio/python-boilerplate"
Issues = "https://github.com/peacockery-studio/python-boilerplate/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python-boilerplate"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "pytest-watcher>=0.4.3",
    "ruff>=0.8.0",
    "ty>=0.0.1a32",
]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["python_boilerplate"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# ty Configuration
# =============================================================================
[tool.ty.environment]
python-version = "3.11"

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--durations=10",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2

# =============================================================================
# pytest-watcher Configuration
# =============================================================================
[tool.ptw]
runner = "pytest"
now = true
clear = true
ignore = ["*.tmp", "*.pyc", "__pycache__", ".git", ".pytest_cache", "htmlcov"]
watch = ["src/", "tests/"]
patterns = ["*.py"]
args = ["-v", "--tb=short", "--no-cov", "-x"]

# =============================================================================
# Semantic Release Configuration
# =============================================================================
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version}"
tag_format = "v{version}"

[tool.semantic_release.changelog]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
